--- a/styles/projects.css
+++ b/styles/projects.css
@@ -4,7 +4,7 @@
 }
 
 .my-projects-title {
-  font-size: 6rem;
+  font-size: 4rem;
   text-align: center;
   font-weight: 900;
 }
@@ -25,6 +25,12 @@
   border-top-left-radius: 3rem;
   border-bottom-right-radius: 5rem;
   background-color: transparent;
+  cursor: pointer;
+  transition: all 500ms ease-in-out;
+}
+
+.project-cards:hover {
+  scale: 1.05;
 }
 
 .project-cards img {
@@ -32,15 +38,15 @@
   object-fit: cover;
   overflow: hidden;  
   /* filter: drop-shadow(0rem 0rem 0.4rem rgba(255, 255, 255, 0.103)); */
-  transition: all 500ms ease-in-out;
+  transition: all 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-cards:hover img {  
-  filter: drop-shadow(0rem 0rem 0.4rem var(--clr-primary));
+  filter: drop-shadow(0rem 0rem 0.4rem #e0cc5d28);
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .project-cards img {
+  .fade-in {
     opacity: 0;
     scale: 0.6;
     animation: fade-in linear forwards;
@@ -55,3 +61,64 @@
     }
   }
 }
+
+.cards-info-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.project-info {
+  width: 30vw;
+  /* aspect-ratio: 1.618; */
+  padding-top: 1rem;
+  text-align: center;
+  background-color: transparent;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.info-title {
+  font-size: 2rem;
+  font-weight: 900;
+  color: var(--clr-primary);
+}
+
+.info-sub-title {
+  font-size: 1.3rem;
+  font-weight: 200;
+}
+
+.info-text {
+  font-size: 0.9rem;
+  /* line-height: 110%; */
+}
+
+.project-cta {
+  width: 10rem;
+  height: 3.4rem;
+  border: 0.2rem solid white;
+  font-size: 1.3rem;
+  border-radius: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 400ms ease-in-out;
+}
+
+.project-cta:hover {
+  letter-spacing: 0.05rem;
+}
+
+.my-projects-cta {
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
